--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clickygame",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thePalad1n.github.io/MC-Clicky/index.html",
+  "homepage": "https://thePalad1n.github.io/MC-Clicky/public/index.html",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
