--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clickygame",
+  "name": "MC-Clicky",
   "version": "0.1.0",
   "private": false,
   "homepage": "https://thePalad1n.github.io/MC-Clicky/public/index.html",
